cmake_minimum_required(VERSION 3.10)

project(RTVVULFW VERSION 1.0.1 DESCRIPTION "Framework for creating Vulkan applications")

file (GLOB RTVVULFW_SOURCES CONFIGURE_DEPENDS "*.cpp")
file (GLOB RTVVULFW_HEADERS CONFIGURE_DEPENDS "*.h")

add_library(RTVVULFW SHARED ${RTVVULFW_HEADERS} ${RTVVULFW_SOURCES})

target_include_directories(RTVVULFW PUBLIC ${CUSTOM_INCLUDES})
target_link_libraries(RTVVULFW ${CUSTOM_LIBRARIES})

message(STATUS "CUSTOM_INCLUDES: ${CUSTOM_INCLUDES}")
message(STATUS "CUSTOM_LIBRARIES: ${CUSTOM_LIBRARIES}")

